--- a/LiteCommerce.Admin/Views/Customer/Input.cshtml
+++ b/LiteCommerce.Admin/Views/Customer/Input.cshtml
@@ -8,7 +8,7 @@
         </div>
         <div class="box-body">
             <div class="form-group">
-                <label>Customer ID:</label>
+                <label>Customer ID: @Html.ValidationMessage("CustomerID")</label>
                 <input type="text" class="form-control" placeholder="Enter Customer ID" name="CustomerID" value="@Model.CustomerID" @(Model.CustomerID != "" ? "readOnly" : "")>
             </div>
             <div class="form-group">
@@ -32,11 +32,11 @@
             <div class="form-group row">
                 <div class="col-sm-6">
                     <label>Country:</label>
-                    <select class="form-control">
+                    <select class="form-control" name="Country">
                         <option value="">-- Choose Country --</option>
                         @foreach (var country in SelectListHelper.Countries())
                         {
-                            if (Model.Country == country.Value)
+                            if (Model.Country == country.Value || Model.Country == country.Text)
                             {
                                 <option value="@country.Value" selected>@country.Text</option>
                             }
