--- a/LiteCommerce.Admin/Views/Shipper/Input.cshtml
+++ b/LiteCommerce.Admin/Views/Shipper/Input.cshtml
@@ -9,7 +9,7 @@
         <input name="ShipperID" value="@Model.ShipperID" type="hidden" />
         <div class="box-body">
             <div class="form-group">
-                <label>Company Name:</label>
+                <label>Company Name: @Html.ValidationMessage("CompanyName")</label>
                 <input type="text" class="form-control" placeholder="Enter Company Name" name="CompanyName" value="@Model.CompanyName">
             </div>
             <div class="form-group row">
