--- a/LiteCommerce.Admin/Views/Shared/_MainSideBar.cshtml
+++ b/LiteCommerce.Admin/Views/Shared/_MainSideBar.cshtml
@@ -7,7 +7,7 @@
                 <img src="~/Themes/AdminLTE/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
             </div>
             <div class="pull-left info">
-                <p>Alexander Pierce</p>
+                <p>@User.Identity.Name</p>
                 <a href="#"><i class="fa fa-circle text-success"></i> Sale Manager</a>
             </div>
         </div>
