minor fix in Post Input action ProductController

--- a/LiteCommerce.Admin/Views/Customer/Index.cshtml
+++ b/LiteCommerce.Admin/Views/Customer/Index.cshtml
@@ -68,7 +68,7 @@
                             </td>
                             <td>
                                 <span style="display:block">@customer.Address</span>
-                                <span>@customer.Country</span>
+                                <span>@customer.City</span>
                             </td>
                             <td>
                                 <span style="display:block"><i class="fa fa-phone"></i>@customer.Phone</span>
