--- a/LiteCommerce.Admin/Views/Product/Input.cshtml
+++ b/LiteCommerce.Admin/Views/Product/Input.cshtml
@@ -67,7 +67,7 @@
                     </div>
                     <div class="col-sm-6">
                         <label>Unit Price: @Html.ValidationMessage("UnitPrice")</label>
-                        <input type="text" class="form-control" placeholder="Unit Price" name="UnitPrice" value="@Model.UnitPrice">
+                        <input type="number" class="form-control" placeholder="Unit Price" name="UnitPrice" value="@Model.UnitPrice">
                     </div>
                 </div>
                 <div class="form-group">
@@ -98,7 +98,7 @@
                                 {
                                     <div class="col-sm-6">
                                         <label>@att.AttributeName:</label>
-                                        <select class="form-control" name="attributes">
+                                        <select class="form-control" name="atts">
                                             <option value="">-- Choose Country --</option>
                                             @foreach (var country in SelectListHelper.Countries())
                                             {
@@ -118,7 +118,7 @@
                                 {
                                     <div class="col-sm-6">
                                         <label>@att.AttributeName:</label>
-                                        <input name="attributes" type="text" class="form-control" value="@att.AttributeValues" />
+                                        <input name="atts" type="text" class="form-control" value="@att.AttributeValues" />
                                     </div>
                                 }
                             }
