--- a/LiteCommerce.Admin/Views/Shared/_Header.cshtml
+++ b/LiteCommerce.Admin/Views/Shared/_Header.cshtml
@@ -104,23 +104,25 @@
                     </ul>
                 </li>
                 <!-- User Account: style can be found in dropdown.less -->
+                @{
+                    var userData = User.GetUserData();
+                }
                 <li class="dropdown user user-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        <img src="~/Themes/AdminLTE/dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
-                        <span class="hidden-xs">Alexander Pierce</span>
+                        <img src="~/Uploads/Images/@userData.Photo" class="user-image" alt="User Image">
+                        <span class="hidden-xs">@userData.FullName</span>
                     </a>
                     <ul class="dropdown-menu">
                         <!-- User image -->
                         <li class="user-header">
-                            <img src="~/Themes/AdminLTE/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                            <img src="~/Uploads/Images/@userData.Photo" class="img-circle" alt="User Image">
 
                             <p>
-                                Alexander Pierce
-                                <small>(Sale Manager)</small>
+                                @userData.FullName
+                                <small>(@userData.Title)</small>
                             </p>
                         </li>
                         <!-- Menu Body -->
-                        
                         <!-- Menu Footer-->
                         <li class="user-footer">
                             <div class="pull-left">
@@ -137,8 +139,8 @@
                 </li>
                 <!-- Control Sidebar Toggle Button -->
                 @*<li>
-                    <a href="#" data-toggle="control-sidebar"><i class="fa fa-gears"></i></a>
-                </li>*@
+                        <a href="#" data-toggle="control-sidebar"><i class="fa fa-gears"></i></a>
+                    </li>*@
             </ul>
         </div>
     </nav>
