--- a/LiteCommerce.Admin/Views/Shared/_MainSideBar.cshtml
+++ b/LiteCommerce.Admin/Views/Shared/_MainSideBar.cshtml
@@ -2,8 +2,8 @@
     <!-- sidebar: style can be found in sidebar.less -->
     <section class="sidebar">
         <!-- Sidebar user panel -->
-        @{ 
-            var userData = User.GetUserData();
+        @{
+            WebUserData userData = WebUserData.FromCookieString(User.Identity.Name);
         }
 
         <div class="user-panel">
@@ -11,7 +11,7 @@
                 <img src="~/Uploads/Images/@userData.Photo" class="img-circle" alt="User Image">
             </div>
             <div class="pull-left info">
-                <p>@userData.FullName</p>
+                <p style="margin-bottom: 0px">@userData.FullName</p>
                 <a href="#"><i class="fa fa-circle text-success"></i>@userData.Title</a>
             </div>
         </div>
@@ -61,7 +61,7 @@
                     <li><a href="~/Order/Create"><i class="fa fa-circle-o"></i> Create New</a></li>
                 </ul>
             </li>
-           
+
             <li><a href="~/Report"><i class="fa fa-book"></i> <span>Reports</span></a></li>
             <li class="header">LABELS</li>
             <li><a href="#"><i class="fa fa-circle-o text-red"></i> <span>Important</span></a></li>
