add List of Order and search Order

--- a/LiteCommerce.Admin/Views/Order/Index.cshtml
+++ b/LiteCommerce.Admin/Views/Order/Index.cshtml
@@ -1,21 +1,25 @@
-﻿@{
-    ViewBag.Title = "List";
+﻿@model LiteCommerce.Admin.Models.OrderPaginationResult
+@{
+    ViewBag.Title = "Orders";
+    int i = 0;
 }
 <div class="box box-primary">
     <div class="box-body">
-        <div class="input-group input-group-sm">
-            <input type="text" class="form-control" placeholder="Input search value...">
-            <span class="input-group-btn">
-                <button type="button" class="btn btn-primary btn-flat">
-                    <i class="fa fa-search"></i>
-                </button>
-            </span>
-        </div>
+        <form action="~/Order" method="get">
+            <div class="input-group input-group-sm">
+                <input type="text" class="form-control" placeholder="Input search value..." name="searchValue" value="@Model.SearchValue">
+                <span class="input-group-btn">
+                    <button type="submit" class="btn btn-primary btn-flat">
+                        <i class="fa fa-search"></i>
+                    </button>
+                </span>
+            </div>
+        </form>
     </div>
 </div>
 <div class="container-fluid row" style="margin-bottom:10px;">
     <div class="col-sm-8">
-        There are <b>1,000</b> Orders. Page 1/100
+        There are <b>@Model.RowCount</b> Orders. Page @string.Format("{0}/{1}", Model.Page, Model.PageCount)
     </div>
     <div class="col-md-4 text-right">
         <div class="btn-group">
@@ -38,42 +42,38 @@
                     <th style="width:200px">Date</th>
                     <th style="width:200px">Shipper</th>
                     <th style="width:200px">Ship To</th>
-                    <th style="width:50px">Freight</th>
                     <th style="width:50px"></th>
                 </tr>
             </thead>
             <tbody>
-                @for (int i = 1; i <= 3; i++)
+                @foreach (var order in Model.Data)
                 {
                     <tr>
                         <td>
                             <input type="checkbox" />
                         </td>
-                        <td>@i</td>
+                        <td>@(++i + (Model.Page - 1) * Model.PageSize)</td>
                         <td>
                             <span>
-                                VINET
+                                @order.CustomerCompanyName
                             </span>
                         </td>
                         <td>
-                            <span>Buchanan	Steven</span>
+                            <span>@order.EmployeeName</span>
                         </td>
                         <td>
-                            <span style="display: block">Order date: 2018-07-04</span>
-                            <span style="display: block">Required date: 2018-07-04</span>
-                            <span style="display: block">Shipped date: 2018-07-04</span>
+                            <span style="display: block"> Order date: @order.OrderDate.ToShortDateString()</span>
+                            <span style="display: block">Required date: @order.RequiredDate.ToShortDateString()</span>
+                            <span style="display: block">Shipped date: @order.ShippedDate.ToShortDateString()</span>
                         </td>
                         <td>
-                            <span>Federal Shipping</span>
+                            <span>@order.ShipperCompanyName</span>
                         </td>
                         <td>
-                            <span>P.O. Box 78934, New Orleans - USA</span>
-                        </td>
-                        <td>
-                            <span>32.3800</span>
+                            <span>@string.Format("{0}, {1}, {2}", order.ShipAddress, order.ShipCity, order.ShipCountry)</span>
                         </td>
                         <td class="text-right">
-                            <a class="btn btn-sm btn-default" href="~/Order/Create/@i/">
+                            <a class="btn btn-sm btn-default" href="~/Order/Input/@i/">
                                 <i class="fa fa-edit"></i>
                             </a>
                         </td>
@@ -84,11 +84,50 @@
     </div>
     <div class="box-footer clearfix text-center">
         <ul class="pagination pagination-sm no-margin pull-right">
-            <li><a href="#">«</a></li>
-            <li><a href="#">1</a></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
-            <li><a href="#">»</a></li>
+            @{
+                int currentPage = Model.Page;
+                // Pagination head
+                if (currentPage - 5 > 0)
+                {
+                    int prePage = currentPage - 1;
+                    <li><a href="~/Order?searchValue=@Model.SearchValue&page=1">‹‹</a></li>
+                    <li><a href="~/Order?searchValue=@Model.SearchValue&page=@prePage">‹</a></li>
+                        <li><a href="#">...</a></li>
+                }
+                int startPage = currentPage - 4 > 0 ? currentPage - 4 : 1;
+                for (int page = startPage; page <= currentPage; page++)
+                {
+                    if (page == currentPage)
+                    {
+                        <li class="active"><a href="~/Order?searchValue=@Model.SearchValue&page=@page">@page</a></li>
+                    }
+                    else
+                    {
+                        <li><a href="~/Order?searchValue=@Model.SearchValue&page=@page">@page</a></li>
+                    }
+                }
+
+                // Pagination tail
+                int endPage = currentPage + 4 < Model.PageCount ? currentPage + 4 : Model.PageCount;
+                for (int page = currentPage + 1; page <= endPage; page++)
+                {
+                    if (page == currentPage)
+                    {
+                        <li class="active"><a href="~/Order?searchValue=@Model.SearchValue&page=@page">@page</a></li>
+                    }
+                    else
+                    {
+                        <li><a href="~/Order?searchValue=@Model.SearchValue&page=@page">@page</a></li>
+                    }
+                }
+                if (currentPage + 4 < Model.PageCount)
+                {
+                    int nextPage = currentPage + 1;
+                    <li><a href="#">...</a></li>
+                    <li><a href="~/Order?searchValue=@Model.SearchValue&page=@nextPage">›</a></li>
+                        <li><a href="~/Order?searchValue=@Model.SearchValue&page=@Model.PageCount">››</a></li>
+                }
+            }
         </ul>
     </div>
 </div>
