--- a/LiteCommerce.Admin/Views/Employee/Input.cshtml
+++ b/LiteCommerce.Admin/Views/Employee/Input.cshtml
@@ -20,11 +20,11 @@
             </div>
             <div class="form-group row">
                 <div class="col-sm-4">
-                    <label>FristName:</label>
+                    <label>First Name:</label>
                     <input type="text" class="form-control" placeholder="First Name" name="FirstName" value="@Model.FirstName">
                 </div>
                 <div class="col-sm-4">
-                    <label>LastName:</label>
+                    <label>Last Name:</label>
                     <input type="text" class="form-control" placeholder="Last Name" name="LastName" value="@Model.LastName">
                 </div>
                 <div class="col-sm-4">
@@ -57,7 +57,7 @@
                     </div>
                 </div>
                 <div class="col-sm-6">
-                    <label>HireDay: @Html.ValidationMessage("HireDate")</label>
+                    <label>Hire Day: @Html.ValidationMessage("HireDate")</label>
                     <div class="input-group">
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
@@ -78,7 +78,7 @@
                     </div>
                 </div>
                 <div class="col-sm-6">
-                    <label>HomePhone:</label>
+                    <label>Home Phone:</label>
                     <div class="input-group">
                         <div class="input-group-addon">
                             <i class="fa fa-phone"></i>
