--- a/LiteCommerce.Admin/Views/Shared/_MainSideBar.cshtml
+++ b/LiteCommerce.Admin/Views/Shared/_MainSideBar.cshtml
@@ -45,6 +45,7 @@
                     <li><a href="~/Shipper"><i class="fa fa-circle-o"></i> Shippers</a></li>
                     <li><a href="~/Category"><i class="fa fa-circle-o"></i> Categories</a></li>
                     <li><a href="~/Product"><i class="fa fa-circle-o"></i> Products</a></li>
+                    <li><a href="~/Country"><i class="fa fa-circle-o"></i>Countries</a></li>
                 </ul>
             </li>
             <li><a href="~/Employee"><i class="fa fa-book"></i> <span>Employees</span></a></li>
