add something small

--- a/LiteCommerce.Admin/Views/Country/Index.cshtml
+++ b/LiteCommerce.Admin/Views/Country/Index.cshtml
@@ -49,7 +49,7 @@
                     {
                         <tr>
                             <td>
-                                <input name="countryIDs" value="@country.CountryName.Trim()" type="checkbox" />
+                                <input name="countryIDs" value="@country.CountryID.Trim()" type="checkbox" />
                             </td>
                             <td>@(++i + (Model.Page - 1) * Model.PageSize)</td>
                             <td>
